<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    tools:context=".EditInformationFragment">

    <LinearLayout
        android:id="@+id/surnameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/surname" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:hint="@string/surname_enter"
            android:textSize="14dp" />

        <Button
            android:id="@+id/frag_et_surname_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surnameLayout">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_enter"
            android:textSize="14dp" />

        <Button
            android:id="@+id/frag_et_givenname_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/birthdayLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLayout">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/birthday" />

        <EditText
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/birthdayForm"
            android:inputType="date|none|text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/birthCityLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthdayLayout">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/city_of_birth" />

        <EditText
            android:id="@+id/city_of_birth"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:hint="@string/city_of_birth_enter"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/departmentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthCityLayout">

        <TextView
            android:id="@+id/department_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/department"
            app:layout_constraintEnd_toStartOf="@+id/department_spinner"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/department_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:prompt="@string/toChoose"
            android:entries="@array/departments"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/telLayout"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/departmentLayout">

        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/tel" />

        <EditText
            android:id="@+id/addTel"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:hint="@string/addTel"
            android:phoneNumber="true"
            android:textSize="14dp" />

        <Button
            android:id="@+id/addTelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add"
            android:onClick="addTel"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/telList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/telLayout">

    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:hint="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/telList" />

</androidx.constraintlayout.widget.ConstraintLayout>


